-Cleaned Up Library Dependencies -Updated HelloCharts Library -Updated One day graphing: Labeling for X and Y Axis -Added Tap to Display Data Info (Toast) -Code Cleanup -Final v2.0